--- a/temas.html
+++ b/temas.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <link rel="stylesheet" href="./styles.css">
-    <title>LAGOS ACADEMY :: Home</title>
+    <title>LAGOS ACADEMY :: Temas Vistos</title>
 </head>
 
 <body>
@@ -63,25 +63,7 @@
         </nav>
     </header>
     <main class="container">
-        <h1>TITULO</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas vitae aspernatur architecto aliquid? Rem labore
-            recusandae enim voluptatum hic, quibusdam quia velit quidem maxime eum. Eaque debitis corporis neque
-            perferendis?</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos, illo quo molestiae obcaecati dolores
-            voluptatibus, similique accusantium dignissimos ab eum alias recusandae saepe voluptatum sunt vel iste, qui
-            illum sed.</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas vitae aspernatur architecto aliquid? Rem labore
-            recusandae enim voluptatum hic, quibusdam quia velit quidem maxime eum. Eaque debitis corporis neque
-            perferendis?</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos, illo quo molestiae obcaecati dolores
-            voluptatibus, similique accusantium dignissimos ab eum alias recusandae saepe voluptatum sunt vel iste, qui
-            illum sed.</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas vitae aspernatur architecto aliquid? Rem labore
-            recusandae enim voluptatum hic, quibusdam quia velit quidem maxime eum. Eaque debitis corporis neque
-            perferendis?</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos, illo quo molestiae obcaecati dolores
-            voluptatibus, similique accusantium dignissimos ab eum alias recusandae saepe voluptatum sunt vel iste, qui
-            illum sed.</p>
+        <h1>TEMAS</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas vitae aspernatur architecto aliquid? Rem labore
             recusandae enim voluptatum hic, quibusdam quia velit quidem maxime eum. Eaque debitis corporis neque
             perferendis?</p>
