Elimina margen y reemplaza por un col

--- a/temas.html
+++ b/temas.html
@@ -79,7 +79,7 @@
         <section class="col ">
             <h5>Esta página fue hecha por colaboración de:</h5>
             <div class="d-flex">
-                <div class="me-5">
+                <div class="col">
                     <!-- corregir el tamaño de los iconos -->
                     <p>Iara Pou</p>
                     <span>
@@ -96,7 +96,7 @@
                         </a>
                     </span>
                 </div>
-                <div>
+                <div class="col">
                     <p>Cristian Lagos</p>
                     <span>
                         <a e="button" href="https://www.instagram.com/iaraapou/" target="_blank">
