--- a/recursos.html
+++ b/recursos.html
@@ -68,14 +68,14 @@
             recusandae enim voluptatum hic, quibusdam quia velit quidem maxime eum. Eaque debitis corporis neque
             perferendis?</p>      
     </main>
-    <footer class="row justify-content-evenly bg-light p-5">
-        <section class="col d-flex">
+    <footer class="row justify-content-between bg-light p-5 gy-4">
+        <section class="col-sm-12 col-lg-6 d-flex justify-content-sm-center">
             <img src="./img/Logo-Academia.png" alt="Logo-Academia" class="logo">
             <p class="col-8">Learn English for free with 1913 video lessons by experienced teachers. Classes cover English grammar, vocabulary, pronunciation, IELTS, TOEFL, and more. Join millions of English learners worldwide who are improving every day with engVid</p>
         </section>
-        <section class="col ">
-            <h5>Esta página fue hecha por colaboración de:</h5>
-            <div class="d-flex">
+        <hr class="d-md-block d-lg-none">
+        <section class="col-sm-12 col-lg-6 justify-content-sm-center">
+            <div class="d-flex justify-content-evenly">
                 <div class="me-5">
                     <!-- corregir el tamaño de los iconos -->
                     <p>Iara Pou</p>
@@ -111,7 +111,7 @@
                 </div>
             </div>
             
-            <p>© 2023</p>
+            <p class="text-center">© 2023</p>
         </section>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
