--- a/temas.html
+++ b/temas.html
@@ -71,15 +71,15 @@
             voluptatibus, similique accusantium dignissimos ab eum alias recusandae saepe voluptatum sunt vel iste, qui
             illum sed.</p>
     </main>
-    <footer class="row justify-content-evenly bg-light p-5">
-        <section class="col d-flex">
+    <footer class="row justify-content-between bg-light p-5 gy-4">
+        <section class="col-sm-12 col-lg-6 d-flex justify-content-sm-center">
             <img src="./img/Logo-Academia.png" alt="Logo-Academia" class="logo">
             <p class="col-8">Learn English for free with 1913 video lessons by experienced teachers. Classes cover English grammar, vocabulary, pronunciation, IELTS, TOEFL, and more. Join millions of English learners worldwide who are improving every day with engVid</p>
         </section>
-        <section class="col ">
-            <h5>Esta página fue hecha por colaboración de:</h5>
-            <div class="d-flex">
-                <div class="col">
+        <hr class="d-md-block d-lg-none">
+        <section class="col-sm-12 col-lg-6 justify-content-sm-center">
+            <div class="d-flex justify-content-evenly">
+                <div class="me-5">
                     <!-- corregir el tamaño de los iconos -->
                     <p>Iara Pou</p>
                     <span>
@@ -96,7 +96,7 @@
                         </a>
                     </span>
                 </div>
-                <div class="col">
+                <div>
                     <p>Cristian Lagos</p>
                     <span>
                         <a e="button" href="https://www.instagram.com/iaraapou/" target="_blank">
@@ -114,7 +114,7 @@
                 </div>
             </div>
             
-            <p>© 2023</p>
+            <p class="text-center">© 2023</p>
         </section>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
