--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     <footer class="row justify-content-between bg-light p-5 gy-4">
         <section class="col-sm-12 col-lg-6 d-flex justify-content-sm-center">
             <img src="./img/Logo-Academia.png" alt="Logo-Academia" class="logo">
-            <p class="col-8">Learn English for free with 1913 video lessons by experienced teachers. Classes cover English grammar, vocabulary, pronunciation, IELTS, TOEFL, and more. Join millions of English learners worldwide who are improving every day with engVid</p>
+            <p class="col-8">Aprendé matemática gratis con 1913 lecciones en linea, creadas por (nombre del profesor). Las clases cubren (lista temas) y mucho más!. Sumate a una comunidad de aprendizaje mundial, que mejoran día a dia con Lagos Academy, online learning.</p>
         </section>
         <hr class="d-md-block d-lg-none">
         <section class="col-sm-12 col-lg-6 justify-content-sm-center">
@@ -132,7 +132,7 @@
                 </div>
             </div>
             
-            <p class="text-center">© 2023</p>
+            <p class="text-center font-monospace text-muted">© 2023</p>
         </section>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
