--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     <footer class="row justify-content-between bg-light p-5 gy-4">
         <section class="col-sm-12 col-lg-6 d-flex justify-content-sm-center">
             <img src="./img/Logo-Academia.png" alt="Logo-Academia" class="logo">
-            <p class="col-8">Aprendé matemática gratis con 1913 lecciones en linea, creadas por (nombre del profesor). Las clases cubren (lista temas) y mucho más!. Sumate a una comunidad de aprendizaje mundial, que mejoran día a dia con Lagos Academy, online learning.</p>
+            <p class="col-sm-12 col-lg-8">Aprendé matemática gratis con 1913 lecciones en linea, creadas por (nombre del profesor). Las clases cubren (lista temas) y mucho más!. Sumate a una comunidad de aprendizaje mundial, que mejoran día a dia con Lagos Academy, online learning.</p>
         </section>
         <hr class="d-md-block d-lg-none">
         <section class="col-sm-12 col-lg-6 justify-content-sm-center">
